[gd_scene load_steps=6 format=2]

[ext_resource path="res://resources/Ship.png" type="Texture" id=1]
[ext_resource path="res://Ship.gd" type="Script" id=2]
[ext_resource path="res://resources/buildUP.wav" type="AudioStream" id=3]
[ext_resource path="res://resources/no_Sbullets.wav" type="AudioStream" id=4]
[ext_resource path="res://resources/no_bullets.wav" type="AudioStream" id=5]

[node name="Player" type="Area2D" groups=["player"]]
position = Vector2( 8, 8 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -7, -4, -5, -4, -5, -3, -4, -3, -4, -7, -2, -7, -2, -6, -1, -6, -1, -5, 0, -5, 0, -4, 1, -4, 1, -3, 2, -3, 2, -2, 5, -2, 5, -1, 7, -1, 7, 1, 5, 1, 5, 2, 2, 2, 2, 3, 1, 3, 1, 4, 0, 4, 0, 5, -1, 5, -1, 6, -2, 6, -2, 7, -4, 7, -4, 3, -5, 3, -5, 4, -7, 4, -7, 2, -6, 2, -6, 1, -7, 1, -7, -1, -6, -1, -6, -2, -7, -2 )

[node name="Hold_on" type="Timer" parent="."]
process_mode = 0
wait_time = 0.24
one_shot = true

[node name="build_up" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -17.0

[node name="SupperB_timer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="Get_ready" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="NoBullets_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -8.0

[node name="NoSbullets_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -8.0

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="timeout" from="Hold_on" to="." method="_on_Hold_on_timeout"]
[connection signal="timeout" from="Get_ready" to="." method="_on_Get_ready_timeout"]
